<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/checkInFragment"
        android:icon="@drawable/selector_nav_icon_checkin"
        android:title="@string/nav_checkin" />
    
    <item
        android:id="@+id/planFragment"
        android:icon="@drawable/selector_nav_icon_plan"
        android:title="@string/nav_plan" />
    
    <item
        android:id="@+id/dietFragment"
        android:icon="@drawable/selector_nav_icon_diet"
        android:title="@string/nav_diet" />

    <item
        android:id="@+id/aiChatFragment"
        android:icon="@drawable/selector_nav_icon_ai"
        android:title="@string/nav_ai" />
    
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/selector_nav_icon_profile"
        android:title="我的" />
</menu>
